updates bio and 4.5 + nav aria-roles and spacing fix

--- a/_sass/_6header.scss
+++ b/_sass/_6header.scss
@@ -49,7 +49,7 @@
         padding-bottom: $vertical_rhythm--small;
       }
 
-      nav {
+      nav[aria-label="Primary"] {
         display: -webkit-box;
         display: -ms-flexbox;
         display: flex;
@@ -68,7 +68,7 @@
     }
     //when site has a long menu
     .long_menu & {
-      nav {
+      nav[aria-label="Primary"] {
         display: none;
         @include media( "screen", ">minWidth") {
           display: inherit;
